--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ DerivedData/
 xcuserdata/
 
 ## Xcode Patch
-*.xcodeproj/*
+*.xcodeproj/
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
